overflow fixed

--- a/index.css
+++ b/index.css
@@ -21,11 +21,12 @@ li {
 /* STRUCTURE */
 
 body {
-    width: 100vw;
     background: #F6F5FF;
     font-family: 'Space Grotesk', sans-serif;
  }
-
+header {
+   background: #FFFCF5;
+}
  main, 
  footer {
    /* position: relative; */
@@ -57,6 +58,7 @@ body {
     margin: .5rem 0;
  }
 
+
  .header-nav {
    position: relative;
    width: 100%;
@@ -67,6 +69,7 @@ body {
    flex-direction: column;
    background: #FFFCF5;
    padding: .75rem;
+   overflow: hidden;
  }
 
  #myLinks {
@@ -81,7 +84,6 @@ body {
    justify-content: flex-start;
    border-radius: 10px;
    transition: all .50s ease;
-   overflow: hidden;
  }
 
  .hero-text{
